syntax = "proto3";

package asgt.dataservice.v1alpha1;

option go_package = "dataservice";

import "asgt/type/data.proto";
import "asgt/type/target_value.proto";
import "asgt/type/retention_policy.proto";

message Sample {
  asgt.type.Data data = 1;
  repeated asgt.type.TargetValue target_values = 2;
}

message CreateRequest {
  string dataset_name = 1;
  string dataset_type = 2;
  repeated string tags = 3;
  repeated string targets = 6;
  repeated Sample samples = 4;
  asgt.type.RetentionPolicy retention_policy = 5;
}

message AppendDataRequest {
  string dataset_name = 1;
  string dataset_type = 2;
  repeated Sample samples = 3;
}